--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -39,9 +39,9 @@
 				</a>
 			</li>
 			<li><a href="#about">À propos</a></li>
-			<li><a href="#technologie">Technologies</a></li>
+			<li><a href="#technology">Technologies</a></li>
 			<li><a href="#portfolio">Portfolio</a></li>
-			<li><a href="#formation">Formation</a></li>
+			<li><a href="#education">Formation</a></li>
 			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</nav>
