--- a/src/assets/scss/custom/custom.scss
+++ b/src/assets/scss/custom/custom.scss
@@ -5,11 +5,17 @@
 //
 //   1. Global
 //   2. Header
-//   3. 
+//   3. Sections
+//     3.1 About
+//     3.2 Technology
+//     3.3 Portfolio
 //   4. 
 //   5. 
 //   6. 
 
+@import 'myMixin'; 
+
+//------------------------------------------------------------------------------------------------------------------------------
 // 1. Global
 // ---------
 
@@ -19,16 +25,19 @@
   justify-content: center;
 }
 
-h1{
+h1, h3{
   font-weight: bold;
-  text-transform: uppercase;
 }
 
-h2{
+h1, h2, h3{
     text-transform: uppercase;
-
 }
 
+h3{
+  color : $secondary-color;
+}
+
+//------------------------------------------------------------------------------------------------------------------------------
 // 2. Header
 // ---------
 
@@ -55,7 +64,7 @@ body {
     &.theyseemerollin{
     transform: rotate(720deg);
     transform-origin: center;
-    transition: all 5s ease;
+    transition: all 4s ease;
     }
 }
 
@@ -69,10 +78,10 @@ body {
   height: $sticky-shrinknav-menu-height;
   line-height: $sticky-shrinknav-menu-height;
   width: 100%;
-  transition: all 0.5s ease;
-  padding-top: 5px;
-  padding-right: 120px;
+  transition: all 0.3s ease;
+  padding-top: rem-calc(5);
   text-transform: uppercase;
+  z-index: 9999;
 
 
   li {
@@ -80,7 +89,7 @@ body {
 
     &#logo.hero{
       transform: translateX(90px) translateY(-135px) scale(2.5);
-      transition: all 0.5s ease;
+      transition: all 0.3s ease;
     }
 
     &#logo:hover #hexa-ext{
@@ -127,7 +136,7 @@ body {
   top: 0;
   left: 0;
   overflow: hidden;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
 }
 
 //active class when header is shrinked
@@ -147,7 +156,7 @@ body.sticky-shrinknav-wrapper {
 }
 
 body .sticky-shrinknav-header.hide-nav{
-  height: 0px !important;
+  height: 0px;
 }
 
 body .sticky-shrinknav-header.show-nav{
@@ -159,10 +168,15 @@ body .sticky-shrinknav-header.show-nav{
   flex-direction: column;
   display: flex;
   align-items: flex-start;
-  padding-right: 60px;
+  padding-left: rem-calc(40);
   transition : all 0.1s linear;
   opacity: 1;
 }
+
+.menu .active > a{
+  background: none;
+}
+
 
 // small devices
 
@@ -271,6 +285,196 @@ body .sticky-shrinknav-header.show-nav{
 
   }    
 
+}
+
+//------------------------------------------------------------------------------------------------------------------------------
+// 3. Sections
+// ---------
+
+section{
+
+  padding : rem-calc(60 50);
+
+  @include breakpoint(small only) {
+
+    padding : rem-calc(96.5 50);
+  }
+
+  .title{
+
+    padding-bottom: rem-calc(60);
+
+      h3{
+        transition: all 1s ease; 
+        position: relative;
+        z-index: -1;
+
+          &::after{
+          content: '';
+          display: block;
+          position: absolute;
+          top: 1; right: 0; bottom: 0; left: 0;
+          margin: -2px;
+          z-index: -1;
+          transition: width 0.3s ease;
+          width: 0%;
+          height: 2px;
+          background-color: $mypurple;
+          }
+
+      }
+    
+  }
+
+  .content{
+    width: 100%;
+  }
+
+  &.active{
+    .title h3{
+      transition: all 1s ease;
+      color : $mypurple;
+
+      &::after{
+        width: 100%;
+        transition-delay: 2s;
+        transition: width 0.7s ease;
+      }
+    }
+  }
 
 }
 
+// 3.1 About
+
+#about{
+
+  img{
+    border-right : 7px solid $secondary-color;
+    border-bottom : 7px solid $secondary-color;
+    transition: all 1s ease;
+  }
+
+  .text{
+    border-bottom : 2px solid $secondary-color;
+    border-top : 2px solid $secondary-color;
+
+      p{
+        padding : rem-calc(20 0);
+        transition: all 0.7s ease;
+      }
+  }
+
+  &.active{
+  
+    img{
+      border-right-color : $mypurple;
+      border-bottom-color : $mypurple;
+      transition: all 1s ease;
+    }
+
+    .text{
+      border-bottom-color : $mypurple;
+      border-top-color : $mypurple;
+      transition: all 0.7s ease;
+      
+      
+      @include breakpoint(medium) {
+        p{
+          transform : translateX(rem-calc(20));
+          transition: all 0.7s ease;
+          z-index: -1;
+        }
+      }
+    }
+
+  }
+
+}
+
+// 3.2 Technologies
+
+#technology
+{
+
+  .hexa{
+     @include hexa-icon('blue');
+  }
+
+  ul#tech-cat{
+    list-style-type: none;
+
+    .tech-list{
+      padding-bottom: rem-calc(50);
+    }
+
+    .tech-list-title{
+
+      i{
+        color: $white;
+        font-size: rem-calc(25);
+        padding: rem-calc(20);
+      }
+
+      h4{
+        margin-top: 10px;
+      }
+    }
+
+    .tech-list-content{
+      margin : auto;
+      transition: all 0.7s ease;
+      
+      li{
+        text-align : left;
+      }
+
+    }
+
+  }
+  
+  &.active{
+
+    .hexa{
+      @include hexa-icon('purple');
+    }
+
+    .tech-list-content{
+      transform : translateY(20px);
+      transition: all 0.7s ease;
+      z-index : -1; 
+    }
+
+  }
+
+
+}
+
+// 3.3 portfolio
+
+#portfolio-container
+{
+  background-color: $secondary-color;
+  position: relative;
+  z-index: -1;
+}
+  
+#portfolio{
+  
+  height : 1200px;
+
+  h3{
+    z-index : -1;
+    color : $white;
+  }
+
+  .card
+  {
+    background : $white;
+    height: 350px;
+
+    .project-screen{
+
+    }
+  }
+}
