--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -6,29 +6,24 @@
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Foundation for Sites</title>
+    <title>Romain Rouault - Développeur Web</title>
     <link rel="stylesheet" href="{{root}}assets/css/app.css">
-    <link rel="stylesheet" href="{{root}}assets/css/custom.css">
     <link rel="stylesheet" href="{{root}}assets/fonts/fontawesome-free-5.5.0-web/css/all.min.css">
-
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
   </head>
 <body>
-  <div class="grid-container">
-    <div class="grid-x grid-padding-x">
-      <div class="large-12 cell">
 
 
-  		{{> header }}
-  		{{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
-  		{{> body}}
+	{{> header }}
+	{{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
+	{{> body}}
 
-      </div>
-    </div>
-  </div>
   <script src="{{root}}assets/js/jquery-3.3.1.min.js"></script>
   <script src="{{root}}assets/js/foundation.min.js"></script>
-  <script src="{{root}}assets/js/sticky-shrinknav.js"></script>
   <script src="{{root}}assets/js/scroll_spy.js"></script>
+  <script src="{{root}}assets/js/sticky-shrinknav.js"></script>
   <script>$(document).foundation();</script>
+
 </body>
 </html>
