--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -23,6 +23,7 @@
   <script src="{{root}}assets/js/foundation.min.js"></script>
   <script src="{{root}}assets/js/scroll_spy.js"></script>
   <script src="{{root}}assets/js/sticky-shrinknav.js"></script>
+  <script src="{{root}}assets/js/load.js"></script>
   <script>$(document).foundation();</script>
 
 </body>
