--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
 
 	<div id="top-header-small-device" class="grid-x hide-for-medium">
 
-		<div class="cell small-6 logo">
+		<div class="cell small-6 logo" aria-hidden="true">
 			<a>
 				<svg xmlns="http://www.w3.org/2000/svg" width="34" height="40" viewBox="0 0 51.4 60">
 					<polygon id="hexa-ext-small" stroke-miterlimit="10" points="25.5,0.9 50.5,15.5 50.5,44.5 25.5,59.1 0.5,44.5 0.5,15.5 "/>
@@ -29,8 +29,8 @@
 	</div>
 
 	<nav id="main-menu">
-		<ul  class="vertical medium-horizontal align-center menu sticky-shrinknav-menu">
-			<li id="logo" class="hero show-for-medium">
+		<ul  class="vertical menu medium-horizontal align-center sticky-shrinknav-menu">
+			<li id="logo" class="hero show-for-medium" aria-hidden="true">
 				<a>
 					<svg xmlns="http://www.w3.org/2000/svg" width="34" height="40" viewBox="0 0 51.4 60">
 						<polygon id="hexa-ext" stroke-miterlimit="10" points="25.5,0.9 50.5,15.5 50.5,44.5 25.5,59.1 0.5,44.5 0.5,15.5 "/>
