--- a/src/partials/technologie.html
+++ b/src/partials/technologie.html
@@ -9,7 +9,7 @@
 	<li class="small-12 medium-4 tech-list" id="languages">
 		<div class="grid-y text-center">
 			<div class="tech-list-title">
-				<i class="fas fa-code hexa"></i>
+				<i class="fas fa-code hexa" aria-hidden="true"></i>
 				<h4>Langages</h4>
 			</div>
 			<ul class="tech-list-content">
@@ -23,7 +23,7 @@
 	<li class="cell small-12 medium-4 tech-list" id="frameworks">
 		<div class="grid-y text-center">
 			<div class="tech-list-title">
-				<i class="fas fa-book hexa"></i>
+				<i class="fas fa-book hexa" aria-hidden="true"></i>
 				<h4>Frameworks/Bibliothèques</h4>
 			</div>
 			<ul class="tech-list-content">
@@ -38,7 +38,7 @@
 	<li class="cell small-12 medium-4 tech-list" id="CMS">
 		<div class="grid-y text-center">
 			<div class="tech-list-title">
-				<i class="fab fa-wordpress hexa"></i>
+				<i class="fab fa-wordpress hexa" aria-hidden="true"></i>
 				<h4>CMS</h4>
 			</div>
 			<ul class="tech-list-content">
@@ -51,7 +51,7 @@
 	<li class="cell small-12 medium-4 tech-list" id="graphics">
 		<div class="grid-y text-center">
 			<div class="tech-list-title">
-				<i class="fas fa-paint-brush hexa"></i>
+				<i class="fas fa-paint-brush hexa" aria-hidden="true"></i>
 				<h4>Graphisme</h4>
 			</div>
 			<ul class="tech-list-content">
@@ -64,7 +64,7 @@
 	<li class="cell small-12 medium-4 tech-list" id="various">
 		<div class="grid-y text-center">
 			<div class="tech-list-title">
-				<i class="fas fa-toolbox hexa"></i>
+				<i class="fas fa-toolbox hexa" aria-hidden="true"></i>
 				<h4>Divers</h4>
 			</div>
 			<ul class="tech-list-content">
