--- a/src/assets/scss/custom/custom.scss
+++ b/src/assets/scss/custom/custom.scss
@@ -9,9 +9,9 @@
 //     3.1 About
 //     3.2 Technology
 //     3.3 Portfolio
-//   4. 
-//   5. 
-//   6. 
+//     3.4 Education
+//   4. Footer
+//   5. Modal
 
 @import 'myMixin'; 
 
@@ -36,7 +36,15 @@ h1, h2, h3{
 h3{
   color : $secondary-color;
 }
+  
+.button{
+  border: rem-calc(3) solid $primary-color;
+  transition : border 2s ease;
 
+    :hover{
+      color : $mypurple;
+    }
+}
 //------------------------------------------------------------------------------------------------------------------------------
 // 2. Header
 // ---------
@@ -153,10 +161,6 @@ body.sticky-shrinknav-wrapper {
     }
   }
   
-}
-
-body .sticky-shrinknav-header.hide-nav{
-  height: 0px;
 }
 
 body .sticky-shrinknav-header.show-nav{
@@ -287,17 +291,22 @@ body .sticky-shrinknav-header.show-nav{
 
 }
 
+body .sticky-shrinknav-header.hide-nav{
+  height: 0px;
+}
+
 //------------------------------------------------------------------------------------------------------------------------------
 // 3. Sections
 // ---------
 
 section{
 
-  padding : rem-calc(60 50);
+  padding : rem-calc(100 50);
+
 
   @include breakpoint(small only) {
 
-    padding : rem-calc(96.5 50);
+    padding : rem-calc(96.5 10);
   }
 
   .title{
@@ -331,6 +340,7 @@ section{
   }
 
   &.active{
+
     .title h3{
       transition: all 1s ease;
       color : $mypurple;
@@ -396,6 +406,34 @@ section{
 
 #technology
 {
+  position: relative;
+  z-index: -1;
+
+  &::after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0; right: 0; bottom: 0; left: 1;
+    z-index: -1;
+    transition: height 0.3s ease;
+    width: 2px;
+    height: 0%;
+    background-color: $mypurple;
+  }
+
+  &::before{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0; right: 1; bottom: 0; left: 0;
+    z-index: -1;
+    transition: height 0.3s ease;
+    width: 2px;
+    height: 0%;
+    background-color: $mypurple;
+  }
+
+
 
   .hexa{
      @include hexa-icon('blue');
@@ -435,6 +473,12 @@ section{
   
   &.active{
 
+      &::after, &::before{
+        height: 98%;
+        transition-delay: 3s;
+        transition: height 2s ease;
+      }
+
     .hexa{
       @include hexa-icon('purple');
     }
@@ -456,25 +500,303 @@ section{
 {
   background-color: $secondary-color;
   position: relative;
-  z-index: -1;
+  //z-index: -9999;
 }
   
 #portfolio{
+
+  position : relative;
+  z-index: 1;
+
+  &::after{
+    content: '';
+    display: block;
+    position: absolute;
+    top: 14%; right: 50%; bottom: 0; left: 50%;
+    z-index: -1;
+    transition: height 0.3s ease;
+    width: 2px;
+    height: 0%;
+    background-color: $mypurple;
+  }
+
+  &.more-content::after{
+    top : 9%;
+    }
+
+
+  &.active{
+
+    &::after{
+      height: 85%;
+      transition-delay: 3s;
+      transition: height 2s ease;
+    }
+
+    &.more-content::after{
+      height : 90%;
+    }
+
+
+    .button{
+      border-color: $mypurple;
+      transition-delay: 1s !important;
+      transition : all 2s ease;
+    }
   
-  height : 1200px;
+    .project-card{
+      
+      transition: all 1s ease;
+
+      &.top-border{
+        border-top-color: $mypurple;
+      }
+
+      &.bottom-border{
+        border-bottom-color: $mypurple;
+      }
+
+      &.right-border{
+        border-right-color: $mypurple;
+      }
+
+      &.left-border{
+        border-left-color: $mypurple;
+      }
+
+      &.right-border, &.left-border, &.bottom-border, &.top-border{
+        transition : all 1s ease;
+      }
+
+    }
+
+  }
 
   h3{
     z-index : -1;
     color : $white;
   }
 
-  .card
+  .project-card
   {
+    
+    padding : rem-calc(10 80);
+    margin-bottom: rem-calc(50);
     background : $white;
-    height: 350px;
+    transition: all 1s ease;
 
-    .project-screen{
+    @include breakpoint(small only) {
+      padding : rem-calc(10 5);
+    }
+   &.top-border{
+      border-top-color: solid 7px $primary-color;
+    }
 
+    &.bottom-border{
+      border-bottom: solid 7px $primary-color;
+    }
+
+
+    &.left-border{
+      border-left: solid 7px $primary-color;
+    }
+
+    &.right-border{
+      border-right: solid 7px $primary-color;
+    }
+
+    &.right-border, &.left-border, &.bottom-border, &.top-border{
+      transition : all 1s ease;
+    }
+
+    .screen-project-wrapper{
+      border: 8px solid black;
+      border-top-width: 14px;
+      border-radius: 10px 10px 0 0;
+      display: inline-block;
+      overflow: hidden;
+      width: 95%;
+      margin: auto;
+      position: relative;
+      
+      $image-hover-wrapper-transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      $image-hover-wrapper-transition-delay: 0.25s;
+
+      a {
+        display: inline-block;
+        letter-spacing: normal;
+        line-height: initial;
+        margin: 0;
+        padding: 0;
+        position: relative;
+
+        img {
+          overflow: hidden;
+          width: 100%;
+        }
+
+        .image-hover-wrapper-reveal {
+          background-color: rgba(0, 0, 0, 0.5);
+          color: $white;
+          display: inline;
+          height: 100%;
+          margin-left: -100%;
+          opacity: 0;
+          position: absolute;
+          width: 100%;
+          z-index: 80;
+          transition: $image-hover-wrapper-transition;
+          transition-delay: $image-hover-wrapper-transition-delay;
+
+          &:hover {
+            opacity: 1;
+            transition: $image-hover-wrapper-transition;
+          }
+
+          &:hover p {
+            opacity: 1;
+            transform: translateY(-100%);
+            transition: $image-hover-wrapper-transition;
+            transition-delay: $image-hover-wrapper-transition-delay;
+          }
+
+          p {
+            margin : 0;
+            bottom: 0;
+            display: block;
+            opacity: 0;
+            position: absolute;
+            text-align: center;
+            width: 100%;
+            transition: $image-hover-wrapper-transition;
+          }
+
+        }
+
+      }
+    }
+
+    p.project-description {
+      font-size: 12px;
+      padding : rem-calc(10 0 10 0);
     }
   }
+
+  #more-projects{
+    margin : auto;
+  }
+}
+
+// 3.4 education
+
+//------------------------------------------------------------------------------------------------------------------------------
+// 5. Modal
+// ---------
+
+.orbit{
+
+  .orbit-wrapper{
+    padding : rem-calc(0 25);
+
+  }
+  .orbit-container{
+    min-height: 330px;
+  }
+
+  @include breakpoint(small only) {
+    .orbit-container{
+      min-height: unset;
+    }
+  }
+
+  .orbit-bullets button{
+    width : 9rem;
+    height: 100%;
+    background-color : unset;
+    cursor: pointer;
+  }
+}
+
+#project-details{
+
+  padding : 0;
+  
+  .close-button{
+    position : inherit;
+    top : 0;
+    color : $secondary-color;
+    transition : all 0.5s ease-out;
+
+    &:hover{
+      color: $mypurple;
+      transition : all 0.5s ease-out;
+    }
+  }
+
+  .close-top{
+    
+    background-color: $primary-color;
+    height : rem-calc(50);
+
+    .close-button{
+      font-size: 2.8rem;
+    }
+  }
+
+  .close-bottom button{
+    font-size: rem-calc(18);
+    padding : rem-calc(10);
+  }
+
+  .project-details-content{
+    padding : rem-calc(25 0);
+
+    .project-details-description{
+      
+      padding-right: rem-calc(5);
+      border-right: 2px solid $mypurple;
+
+      .project-details-text p{
+        font-size: rem-calc(14);
+      }
+    }
+  }
+
+  h4{
+    margin-bottom: rem-calc(25);
+    position: relative;
+    z-index: -1;
+
+      &::after{
+      content: '';
+      display: block;
+      position: absolute;
+      top: 1; right: -50%; bottom: 0; left: -50%;
+      margin: auto;
+      z-index: -1;
+      transition: width 0.3s ease;
+      width: 150%;
+      height: 2px;
+      background-color: $mypurple;
+      }
+
+  }
+
+  footer{
+    
+    i{
+      padding-right: rem-calc(5);
+    }
+
+    button{
+      margin : rem-calc(0 20);
+      transition : border-color 0.5s ease-out;
+    }
+  }
+
+}
+
+button:hover{
+  border-color: $mypurple;
+  transition : border-color 0.5s ease-out;
 }
