--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -1,7 +1,86 @@
 <section id="portfolio">
+	<div class="grid-container">
 
-	<div class="title grid-x small-12 align-center">
-		<h3>Portfolio</h3>
+		<div class="title grid-x small-12 align-center">
+			<h3>Portfolio</h3>
+		</div>
+
+		<div class="grid-x grid-margin-x cards-wrapper">
+
+			<div class="project-card cell medium-6 small-12 right-border" id="bib92">
+				<div class="grid-y grid-padding-y text-center">
+					<h4>Bib92</h4>
+						<div class="screen-project-wrapper">
+							<a class="project-details" id="bib92-modal">
+								<img class="screen-project" src="assets/img/project/screen-bib92.png" alt="site bib92 screenshot"/>
+								<span class="image-hover-wrapper-reveal">
+							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
+							    </span>
+							</a>
+						</div>
+					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
+				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+				</div>
+			</div>
+
+			<div class="project-card cell medium-6 small-12 left-border" id="">
+				<div class="grid-y grid-padding-y text-center">
+					<h4>Bib92</h4>
+						<div class="screen-project-wrapper">
+							<a class="project-details" id="bib92-modal">
+								<img class="screen-project" src="assets/img/project/screen-bib92.png" alt="site bib92 screenshot"/>
+								<span class="image-hover-wrapper-reveal">
+							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
+							    </span>
+							</a>
+						</div>
+					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
+				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+				</div>
+				<div class="full reveal" id="project-details-modal" data-reveal></div>
+			</div>
+
+			<div class="project-card cell medium-6 small-12 right-border" id="">
+				<div class="grid-y grid-padding-y text-center">
+					<h4>Bib92</h4>
+						<div class="screen-project-wrapper">
+							<a class="project-details" id="bib92-modal">
+								<img class="screen-project" src="assets/img/project/screen-bib92.png" alt="site bib92 screenshot"/>
+								<span class="image-hover-wrapper-reveal">
+							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
+							    </span>
+							</a>
+						</div>
+					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
+				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+				</div>
+				<div class="full reveal" id="project-details-modal" data-reveal></div>
+			</div>
+
+			<div class="project-card cell medium-6 small-12 left-border" id="">
+				<div class="grid-y grid-padding-y text-center">
+					<h4>Bib92</h4>
+						<div class="screen-project-wrapper">
+							<a class="project-details" id="bib92-modal">
+								<img class="screen-project" src="assets/img/project/screen-bib92.png" alt="site bib92 screenshot"/>
+								<span class="image-hover-wrapper-reveal">
+							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
+							    </span>
+							</a>
+						</div>
+					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
+				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
+				</div>
+				<div class="full reveal" id="project-details--modal" data-reveal></div>
+			</div>
+			
+			<div id="more-projects" class="align-center">
+				<a class="button" id="more-projects-button">Voir plus de projets</a>
+			</div>
+		</div>
+
+	</div>
+	<div class="full reveal" id="project-details" data-reveal>
 	</div>
 
 </section>
