--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -7,7 +7,7 @@
 <div class="content grid-x">
 
 	<div class="photo cell medium-4 small-12">
-		<img src="{{root}}/assets/img/romain-rouault.jpg" alt="Photo Romain Rouault">
+		<img src="{{root}}/assets/img/romain-rouault.png" alt="Photo Romain Rouault">
 	</div>
 
 	<div class="text cell medium-8 small-12">
