--- a/src/partials/education.html
+++ b/src/partials/education.html
@@ -20,7 +20,7 @@
     </div>
     <div class="timeline-content right">
       <p class="timeline-content-date">2014</h2>
-      <p>Je deviens bibliothécaire multimédia dans le <a href="http://mediatheque.clamart.fr/">Réseau des médiathèques de Clamart</a>.</br>Parmi mes mission : l'administration et l'animation du portail web du Réseau, le développement d’un projet jeux vidéo (animations, acquisitions), la communication print, l'animation d’un espace multimédia (activités pédagogiques et ludiques), du service public, et la gestion et valorisation des collections numériques.</p>
+      <p>Je deviens bibliothécaire multimédia dans le <a href="http://mediatheque.clamart.fr/">Réseau des médiathèques de Clamart</a>.</br>Parmi mes missions : l'administration et l'animation du portail web du Réseau, le développement d’un projet jeux vidéo (animations, acquisitions), la communication print, l'animation d’un espace multimédia (activités pédagogiques et ludiques), du service public, et la gestion et valorisation des collections numériques.</p>
     </div>
   </div>
 
