--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -41,7 +41,7 @@
 			<li><a href="#about">À propos</a></li>
 			<li><a href="#technology">Technologies</a></li>
 			<li><a href="#portfolio">Portfolio</a></li>
-			<li><a href="#education">Formation</a></li>
+			<li><a href="#education">Parcours</a></li>
 			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</nav>
