--- a/src/layouts/modal.html
+++ b/src/layouts/modal.html
@@ -1,5 +1,5 @@
 <nav class="close-top text-center">
-	<button class="close-button" data-close aria-label="Close reveal" type="button">
+	<button class="close-button" data-close aria-label="Fermer la fenêtre" type="button">
 		<span aria-hidden="true">&times;</span>
 	</button>
 </nav>
@@ -11,9 +11,9 @@
 </div>
 
 <nav class="close-bottom text-center">
-	<button class="close-button button" data-close aria-label="Close reveal" type="button">Retour</button>
+	<button class="close-button button" data-close type="button">Retour</button>
 </nav>
 
-<script src="{{root}}assets/js/jquery-3.3.1.min.js"></script>
-<script src="{{root}}assets/js/foundation.min.js"></script>
-<script>$(document).foundation();</script>
+<script>
+	$(".orbit").foundation();
+</script>
