--- a/src/partials/portfolio.html
+++ b/src/partials/portfolio.html
@@ -11,7 +11,7 @@
 				<div class="grid-y grid-padding-y text-center">
 					<h4>Bib92</h4>
 						<div class="screen-project-wrapper">
-							<a class="project-details" id="bib92-modal">
+							<a class="project-details" id="bib92-modal" data-open="project-details">
 								<img class="screen-project" src="assets/img/project/bib92/screen-bib92-1.png" alt="site bib92 screenshot"/>
 								<span class="image-hover-wrapper-reveal">
 							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
@@ -23,11 +23,11 @@
 				</div>
 			</div>
 
-			<div class="project-card cell medium-6 small-12 left-border" id="">
+			<div class="project-card cell medium-6 small-12 left-border" id="boob92">
 				<div class="grid-y grid-padding-y text-center">
-					<h4>Bib92</h4>
+					<h4>Boob92</h4>
 						<div class="screen-project-wrapper">
-							<a class="project-details" id="bib92-modal">
+							<a class="project-details" id="boob92-modal" data-open="project-details">
 								<img class="screen-project" src="assets/img/project/bib92/screen-bib92-1.png" alt="site bib92 screenshot"/>
 								<span class="image-hover-wrapper-reveal">
 							      <p>En savoir plus<br><i class="fas fa-eye" aria-hidden="true"></i></p>
@@ -37,7 +37,6 @@
 					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
 				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
 				</div>
-				<div class="full reveal" id="project-details-modal" data-reveal></div>
 			</div>
 
 			<div class="project-card cell medium-6 small-12 right-border" id="">
@@ -54,7 +53,6 @@
 					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
 				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
 				</div>
-				<div class="full reveal" id="project-details-modal" data-reveal></div>
 			</div>
 
 			<div class="project-card cell medium-6 small-12 left-border" id="">
@@ -71,7 +69,6 @@
 					<img class="screen-laptop" src="assets/img/screen-laptop-low.png" alt=""/>
 				    <p class="project-description text-left">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce sodales diam ac hendrerit aliquet. Phasellus pretium libero vel molestie maximus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam quis est quam. Aenean blandit a urna laoreet tincidunt.</p>
 				</div>
-				<div class="full reveal" id="project-details--modal" data-reveal></div>
 			</div>
 			
 			<div id="more-projects" class="align-center">
@@ -80,6 +77,7 @@
 		</div>
 
 	</div>
+
 	<div class="full reveal" id="project-details" data-reveal>
 	</div>
 
